# waydroid-injector

./: .gitignore  README.md  install.sh  manifest-example.toml  pyproject.toml  ruff.toml  waydroid-injector
.github/workflows/: build-test-release.yaml  bump-pdm-depends.yaml
manifests/: libhoudini-wsa.toml  magisk.toml  ndk_translation-guybrush.toml
scripts/: gen-contents-from-filesystem.py
src/waydroid_injector/: __init__.py  __main__.py  build.py  checksum.py  content.py  deserializable.py  manifest.py  source.py  type_defines.py
tests/waydroid_injector/: test___init__.py  test_build.py  test_checksum.py  test_content.py  test_manifest.py  test_source.py
